    - config:
      - New option 'cupt::resolver::no-autoremove-if-rdepends-exist'.
        (Closes: #658981)
      - New option 'cupt::resolver::score::removal-of-autoinstalled'.
      - Lowed a bit the default value of the option
        'cupt::resolver::score::removal'.
      - Parsing configuration files: fixed ignoring the incorrect syntax
        before the end of file in some cases.
    - download/progresses/console:
      - Status line: leave the cursor at the end of line so anynchronous
        warning and error messages are printed on the next line, not over the
        status line.
    - cache/package:
      - When throwing away a duplicate version with different hash sums, show
        also left origins in the warning message.
    - system/resolvers/native:
      - Score calculation: for removals of packages which are not manually
        installed, apply also the 'removal-of-autoinstalled' score.
        (Closes: #662027)
      - Fixed the memory leak. It was introduced in 2.0.0~alpha4.
      - Reverted skipping solutions if an auto-removed element is (partially)
        sticked. It could introduce very long delays in the solution
        calculations in some rare cases.
    - cache:
      - Constructor: don't parse release files more than once.
      - Constructor: parsing release, index and localization files: use
        an alias instead of the full path in the error and warning messages.
      - Constructor: parsing index localization files: print an error when
        the file exists but can't be opened.
      - Parsing release files: don't warn anymore if the 'archive' or 'vendor'
        fields are missing.
    - Don't include a not exported header from cupt/common.hpp, making a
      development binary package usable again. Fixes a regression since
      2.3.0~rc1.
    - Remove accidentally included 'using std::string' from a global namespace.
      Fixes a regression since 2.3.0~rc1.
  * downloadmethods:
    - wget: